[package]
name = "cute-copter-tx"
categories = ["embedded", "no-std"]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Minimal drone flight controller"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
nrf24-rs = "0.1.1"
#cute-copter-config-proto = { path = "../cute-copter-config-proto" }
cute-copter-config-proto = { git = "https://github.com/barafael/cute-copter-config-proto" }
postcard = "0.7.3"
heapless = "0.7.10"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "cute-copter-tx"
test = false
bench = false

[profile.dev]
opt-level = "s"
codegen-units = 16
debug = true
lto = true

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
